--- a/flutter_worker/flutter_app/pubspec.yaml
+++ b/flutter_worker/flutter_app/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   dio: 2.0.22
   flutter_staggered_grid_view: "^0.2.2"
   charts_flutter: ^0.6.0
+  flutter_bloc: ^0.15.0
+  equatable: ^0.2.0
+  json_serializable: ^3.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
